--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:17:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:18:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,38 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-14</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Tyrrell Hatton +17
++8 (F)</td>
+      <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-14</td>
@@ -153,38 +185,6 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-13</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland(W) +3
-E thru 4</td>
-      <td class="greyout leftborder">Tyrrell Hatton +17
-+8 (F)</td>
-      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
@@ -237,15 +237,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Cameron Smith -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td class="greyout leftborder">Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout">Xander Schauffele(W)
@@ -275,7 +275,7 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Robert MacIntyre +3
 -3 thru 13</td>
       <td class="greyout leftborder">Jon Rahm +4
@@ -285,15 +285,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-8</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Justin Thomas(W) -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout">Xander Schauffele
@@ -308,12 +308,28 @@ Not started</td>
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Hideki Matsuyama +2
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Hideki Matsuyama +2
 E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 4</td>
       <td class="greyout">Jon Rahm +4
 -3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Shane Lowry -2
+Not started</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -329,6 +345,22 @@ Not started</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -364,22 +396,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Shane Lowry -2
-Not started</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler(W) -9
@@ -396,22 +412,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -6
@@ -419,7 +419,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy(W) E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Hideki Matsuyama +2
 E thru 5</td>
       <td class="greyout leftborder">Tiger Woods +11
@@ -445,18 +445,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler -9
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Patrick Cantlay(W) +7
 -1 thru 16</td>
       <td class="greyout">Sam Burns
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -9
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td>Jon Rahm(W) +4
+-3 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -492,6 +508,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Corey Conners -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td>Will Zalatoris +3
++1 thru 4</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 thru 14</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Uphill into the Wind</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -9
@@ -506,38 +538,6 @@ Not started</td>
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -9
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td>Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout">Patrick Cantlay +7
--1 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -556,6 +556,54 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -6
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td>Jon Rahm(W) +4
+-3 thru 14</td>
+      <td class="greyout leftborder">Bubba Watson +7
+-1 thru 16</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 2</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Tiger Woods +11
++4 thru 14</td>
+      <td class="greyout">Gary Woodland
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas -1
+Not started</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 4</td>
+      <td class="greyout">Tiger Woods(W) +11
++4 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
       <td>Justin Thomas(W) -1
@@ -563,28 +611,12 @@ Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td class="greyout leftborder">Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">1</td>
-      <td>Cameron Smith -6
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td>Jon Rahm(W) +4
--3 thru 14</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 thru 16</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -595,7 +627,7 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -604,19 +636,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">3</td>
-      <td>Justin Thomas -1
+      <td>Corey Conners -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Collin Morikawa(W) +1
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Tiger Woods +11
-+4 thru 14</td>
-      <td class="greyout">Gary Woodland
+-1 thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td class="greyout leftborder">Will Zalatoris +3
++1 thru 4</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -636,30 +668,14 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Justin Thomas -1
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout">Tiger Woods(W) +11
-+4 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Shane Lowry(W) -2
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Joaquin Niemann +4
 E thru 11</td>
       <td class="greyout leftborder">Sam Burns
@@ -668,34 +684,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -1
-Not started</td>
-      <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td class="greyout leftborder">Will Zalatoris +3
-+1 thru 4</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners(W) -1
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Robert MacIntyre +3
 -3 thru 13</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td class="greyout leftborder">Daniel Berger +14
 +7 thru 14</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">8</td>
+      <td>Rory McIlroy(W) E
+-1 thru 2</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
+      <td>Dustin Johnson +2
++1 thru 2</td>
+      <td>Jon Rahm +4
+-3 thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 16</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -716,28 +732,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">9</td>
-      <td>Rory McIlroy(W) E
--1 thru 1</td>
-      <td>Dustin Johnson +2
-+1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td>Jon Rahm +4
--3 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td>Jon Rahm +4
@@ -749,11 +749,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td>Jon Rahm(W) +4
@@ -764,12 +764,28 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">9</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 5</td>
+      <td>Will Zalatoris +3
++1 thru 4</td>
+      <td>Jon Rahm +4
+-3 thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 thru 16</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">10</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay(W) +7
@@ -796,18 +812,18 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">11</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland(W) +3
-E thru 4</td>
-      <td>Will Zalatoris +3
-+1 thru 4</td>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">12</td>
+      <td>Justin Thomas(W) -1
+Not started</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td>Patrick Cantlay +7
 -1 thru 16</td>
+      <td class="greyout leftborder">Daniel Berger +14
++7 thru 14</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -828,26 +844,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) -1
-Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
-      <td>Jon Rahm +4
--3 thru 14</td>
-      <td>Patrick Cantlay +7
--1 thru 16</td>
-      <td class="greyout leftborder">Daniel Berger +14
-+7 thru 14</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">14</td>
-      <td>Collin Morikawa(W) +1
-E thru 1</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa(W) E
+-1 thru 2</td>
       <td>Hideki Matsuyama +2
 E thru 5</td>
       <td>Jon Rahm +4
@@ -861,11 +861,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland(W) +3
-E thru 4</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 5</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Reed +7
@@ -893,9 +893,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
       <td>Tony Finau +5
@@ -909,11 +909,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">17</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Dustin Johnson +2
 +1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay +7
