--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:17:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 2:18:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -179,11 +179,11 @@ Not started</td>
       <td>Justin Thomas -1
 Not started</td>
       <td>Rory McIlroy E
--1 thru 1</td>
+-1 thru 2</td>
       <td>Tommy Fleetwood(W) +1
 E thru 1</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
+-1 thru 5</td>
       <td class="greyout">Joaquin Niemann +4
 E thru 11</td>
     </tr>
@@ -205,15 +205,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -6
 Not started</td>
       <td>Corey Conners -1
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td class="greyout leftborder">Xander Schauffele
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -221,15 +221,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-3</td>
       <td>Sungjae Im -4
 Not started</td>
       <td>Justin Thomas -1
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland(W) +3
-E thru 4</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 5</td>
       <td class="greyout leftborder">Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout">Brooks Koepka
@@ -253,13 +253,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -6
 Not started</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Rory McIlroy E
--1 thru 1</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+-1 thru 2</td>
       <td>Patrick Cantlay +7
 -1 thru 16</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -285,11 +285,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners(W) -1
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Robert MacIntyre +3
 -3 thru 13</td>
       <td>Jon Rahm +4
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Justin Thomas(W) -1
 Not started</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Will Zalatoris +3
 +1 thru 4</td>
       <td>Tony Finau +5
@@ -317,11 +317,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
-      <td>Viktor Hovland(W) +3
-E thru 4</td>
+      <td class="bigbold">13</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
+      <td>Viktor Hovland(W) +2
+-1 thru 5</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Reed +7
@@ -333,9 +333,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">17</td>
-      <td>Collin Morikawa +1
-E thru 1</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa E
+-1 thru 2</td>
       <td>Jon Rahm(W) +4
 -3 thru 14</td>
       <td>Tony Finau +5
@@ -349,11 +349,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">18</td>
+      <td class="bigbold">17</td>
+      <td>Viktor Hovland +2
+-1 thru 5</td>
       <td>Dustin Johnson +2
 +1 thru 2</td>
-      <td>Viktor Hovland +3
-E thru 4</td>
       <td>Jon Rahm +4
 -3 thru 14</td>
       <td>Patrick Cantlay +7
